<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>eu.cessda.eqb</groupId>
	<artifactId>oaiharvester</artifactId>
	<version>0.0.2-SNAPSHOT</version>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.3.RELEASE</version>
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>
		<gesis.repository.visibility>public</gesis.repository.visibility><!-- valid values: (private|public) -->
		<image_tag>cessda/${project.artifactId}:${project.version}</image_tag>
		<code-generation-comment>This file is generated, all changes will be overriden</code-generation-comment>
		<logging.file>target/application.log</logging.file>
		<logging.level.org.springframework>INFO</logging.level.org.springframework>
		<server.port>8083</server.port>
		<server.servlet.context-path/>
		<documents>data</documents>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
		</dependency>
		<dependency>
			<groupId>de.codecentric</groupId>
			<artifactId>spring-boot-admin-starter-client</artifactId>
			<version>2.1.5</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.jolokia</groupId>
			<artifactId>jolokia-core</artifactId>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger2</artifactId>
			<version>2.9.2</version>
		</dependency>
		<dependency>
			<groupId>io.springfox</groupId>
			<artifactId>springfox-swagger-ui</artifactId>
			<version>2.9.2</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jodd</groupId>
			<artifactId>jodd-mail</artifactId>
			<version>3.6.6</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
		</dependency>
		<dependency>
			<groupId>org.gesis.commons</groupId>
			<artifactId>commons-test</artifactId>
			<version>0.2.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>xalan</groupId>
			<artifactId>xalan</artifactId>
			<version>2.7.2</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<compilerArgs>
						<arg>-Xlint:all</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-javadoc-plugin</artifactId> <version>3.1.0</version> 
				<executions> <execution> <id>javadoc-jar</id> <phase>package</phase> <goals> <goal>jar</goal> </goals> <configuration> <quiet>true</quiet> 
				<charset>UTF-8</charset> <docencoding>UTF-8</docencoding> <docfilessubdirs>true</docfilessubdirs> <includeDependencySources>true</includeDependencySources> 
				<dependencySourceIncludes> <dependencySourceInclude>org.gesis.commons:*</dependencySourceInclude> </dependencySourceIncludes> 
				</configuration> </execution> </executions> </plugin> -->
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<executions>
					<execution>
						<id>get-the-git-infos</id>
						<goals>
							<goal>revision</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<verbose>false</verbose>
					<useNativeGit>true</useNativeGit>
					<failOnNoGitDirectory>false</failOnNoGitDirectory>
					<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>io.fabric8</groupId>
				<artifactId>docker-maven-plugin</artifactId>
				<version>0.30.0</version>
				<configuration>
					<images>
						<image>
							<name>${image_tag}</name>
							<build>
								<dockerFile>${project.basedir}/target/docker/generated/application.Dockerfile</dockerFile>
								<assembly>
									<descriptorRef>artifact</descriptorRef>
								</assembly>
							</build>
						</image>
					</images>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<executions>
					<execution>
						<phase>initialize</phase>
						<configuration>
							<!-- https://stackoverflow.com/a/44033580 -->
							<exportAntProperties>true</exportAntProperties>
							<target>
								<condition property="isSnapshot">
									<contains string="${project.version}" substring="SNAPSHOT" />
								</condition>
								<condition property="docker.registry.uri" value="docker-private-snapshots.gesis.intra">
									<isset property="isSnapshot" />
								</condition>
								<property name="docker.registry.uri" value="docker-private-releases.gesis.intra" />
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>@{argLine} -Dfile.encoding=UTF-8</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.3</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<finalName>${project.artifactId}</finalName>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>application.properties</include>
					<include>**/application*.yml</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
				<includes>
					<include>git.properties</include>
				</includes>
			</resource>
			<resource>
				<directory>src/main/resources/docker</directory>
				<filtering>true</filtering>
				<targetPath>${project.basedir}/target/docker/generated</targetPath>
				<includes>
					<include>**/*</include>
					<include>application.Dockerfile</include>
				</includes>
			</resource>
		</resources>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.apache.maven.plugins
										</groupId>
										<artifactId>
											maven-antrun-plugin
										</artifactId>
										<versionRange>
											[1.8,)
										</versionRange>
										<goals>
											<goal>run</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore/>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>docker-compose</id>
			<properties>
				<documents>/${project.artifactId}/data</documents>
				<logging.file>application.log</logging.file>
			</properties>
		</profile>
	</profiles>

	<organization>
		<name>GESIS – Leibniz-Institute for the Social Sciences</name>
		<url>http://www.gesis.org</url>
	</organization>

	<repositories>
		<repository>
			<id>gesis-${gesis.repository.visibility}</id>
			<url>https://maven.gesis.org/repositories/gesis-${gesis.repository.visibility}</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>gesis-${gesis.repository.visibility}</id>
			<url>https://maven.gesis.org/repositories/gesis-${gesis.repository.visibility}</url>
		</pluginRepository>
	</pluginRepositories>

	<distributionManagement>
		<repository>
			<id>gesis-${gesis.repository.visibility}-releases</id>
			<url>https://maven.gesis.org/repositories/gesis-${gesis.repository.visibility}-releases</url>
		</repository>
		<snapshotRepository>
			<id>gesis-${gesis.repository.visibility}-snapshots</id>
			<url>https://maven.gesis.org/repositories/gesis-${gesis.repository.visibility}-snapshots</url>
		</snapshotRepository>
	</distributionManagement>

</project>
